some cleanup (atoms...);  compiler directives on clojure.data.xml stuff for cljs (temporary).