@@ -4,8 +4,9 @@
   :license {:name "Eclipse Public License"
             :url "http://www.eclipse.org/legal/epl-v10.html"}
   #_ #_ :global-vars {*warn-on-reflection* true}
+  :jvm-opts ["--add-modules" "java.xml.bind"] 
   :dependencies [[org.clojure/clojure "1.9.0"]
-                 [org.clojure/data.xml "0.0.8"]
+                 #_[org.clojure/data.xml "0.0.8"] ; POD cljs xml problem
                  [org.clojure/math.combinatorics "0.1.4"]
                  [net.mikera/vectorz-clj "0.47.0"]
                  [net.mikera/core.matrix "0.61.0"]]
